test/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scale0-test
  labels:
    istio-injection: enabled
